# readables-py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: package-release.yml  package-test.yml
readables/: annotations.py  deferrable.py  env.py  syncable.py
readables/dlock/: README.md
readables/dlock/awaitable/: core.py  state_manager.py  state_manager_tck.py
readables/dlock/blocking/: core.py  state_manager.py  state_manager_tck.py
readables/stream/: sync.py
tests/: test_defer.py  test_dlock.py  test_dlock_blocking.py  test_env.py
