[project]
name = "readables-py"
version = "0.1.2"
description = "Add readability and self-documentation to Python code"
requires-python = ">=3.9"
dependencies = []
readme = 'README.md'
license = 'Apache-2.0'
license-files = ["LICEN[CS]E"]

[project.optional-dependencies]
build = ["setuptools"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["readables"]
exclude = ["tests"]
